[package]
name = "cib-derive"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Cib, copy if borrowed, is used to write polymorphic implementations for both owned and borrowed data."
repository = "https://github.com/alongurny/cib"
homepage = "https://github.com/alongurny/cib"
documentation = "https://docs.rs/cib"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", default-features = false, features = ["parsing", "printing", "proc-macro", "derive"] }